package com.company.erp.modules.inventory.domain.model.valueobject;

public enum AssetStatus {
    AVAILABLE,
    ASSIGNED,
    UNDER_MAINTENANCE,
    DECOMMISSIONED,
    LOST
}
